--- a/kioslave/imap4/CMakeLists.txt
+++ b/kioslave/imap4/CMakeLists.txt
@@ -26,7 +26,7 @@ kde4_install_libtool_file( ${PLUGIN_INSTALL_DIR} kio_imap4 )
 
 target_link_libraries(kio_imap4  ${KDE4_KDE3SUPPORT_LIBS}  ${SASL2_LIBRARIES} kmime  )
 
-install_targets(${LIB_INSTALL_DIR}/kde4 kio_imap4 )
+install_targets(${PLUGIN_INSTALL_DIR} kio_imap4 )
 
 
 ########### install files ###############
