No need to link to libkmime just for base64 coding, QByteArray can do this as well.
svn path=/trunk/KDE/kdepim/libkcal/; revision=535400

--- a/kcal/CMakeLists.txt
+++ b/kcal/CMakeLists.txt
@@ -12,7 +12,6 @@ include_directories(
 	${CMAKE_SOURCE_DIR}/
 	${CMAKE_SOURCE_DIR}/ktnef
 	${CMAKE_SOURCE_DIR}/libemailfunctions
-	${CMAKE_SOURCE_DIR}/libkmime
 	${KDE4_INCLUDES}
 )
 
@@ -196,6 +195,7 @@ add_custom_command(OUTPUT
 ########### next target ###############
 
 set(kcal_LIB_SRCS ${libversit_SRCS} ${libical_SRCS} ${libicalss_SRCS}
+   ${libemailfunctions_SRCS}
    incidencebase.cpp 
    incidence.cpp 
    journal.cpp 
@@ -249,7 +249,7 @@ kde4_add_kcfg_files(kcal_LIB_SRCS htmlexportsettings.kcfgc )
 
 kde4_add_library(kcal SHARED ${kcal_LIB_SRCS})
 
-target_link_libraries(kcal  ${KDE4_KDE3SUPPORT_LIBS} ${QT_QTXML_LIBRARY} ktnef kmime kresources kabc  )
+target_link_libraries(kcal  ${KDE4_KDE3SUPPORT_LIBS} ${QT_QTXML_LIBRARY} ktnef kresources kabc  )
 
 set_target_properties(kcal PROPERTIES VERSION 2.0.0 SOVERSION 2 )
 install_targets(${LIB_INSTALL_DIR} kcal )
