--- a/kpimutils/tests/CMakeLists.txt
+++ b/kpimutils/tests/CMakeLists.txt
@@ -1,38 +1,33 @@
 kde4_header()
 
-include_directories( ${KDE4_INCLUDE_DIR} ${QT_INCLUDES} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}  )
+if(KDE4_BUILD_TESTS)
+
+include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/.. ${KDE4_INCLUDES}  )
 
 
 ########### next target ###############
 
-set(testidmapper_SRCS testidmapper.cpp )
+set(testidmapper_SRCS ${libemailfunctions_SRCS} testidmapper.cpp )
 
 kde4_automoc(${testidmapper_SRCS})
-
-if(KDE4_BUILD_TESTS)
 
 kde4_add_executable(testidmapper ${testidmapper_SRCS})
 
 target_link_libraries(testidmapper  ${KDE4_KDECORE_LIBS} )
 
-endif(KDE4_BUILD_TESTS)
-
 ########### next target ###############
 
-set(testemail_SRCS testemail.cpp )
+set(testemail_SRCS ${libemailfunctions_SRCS} testemail.cpp )
 
 kde4_automoc(${testemail_SRCS})
-
-if(KDE4_BUILD_TESTS)
 
 kde4_add_executable(testemail ${testemail_SRCS})
 
 target_link_libraries(testemail  ${KDE4_KDECORE_LIBS} )
 
-endif(KDE4_BUILD_TESTS)
-
 ########### install files ###############
 
+endif(KDE4_BUILD_TESTS)
 
 kde4_footer()
 
