Fix lots of compiler warnings (const missing, int/unsigned comparisons, missing assignment,etc.).
svn path=/trunk/KDE/kdepim/libkcal/; revision=535494

--- a/kcal/libical/src/libical/icalderivedparameter.c.in
+++ b/kcal/libical/src/libical/icalderivedparameter.c.in
@@ -51,7 +51,7 @@ struct icalparameter_impl* icalparameter_new_impl(icalparameter_kind kind);
    representation of the parameter's name */
 struct icalparameter_kind_map {
     icalparameter_kind kind;
-    char *name;
+    const char *name;
     
 };
 
