--- a/kcal/libical/src/libical/icalrestriction.c.in
+++ b/kcal/libical/src/libical/icalrestriction.c.in
@@ -100,7 +100,8 @@ char restr_string_map[ICAL_RESTRICTION_UNKNOWN+1][60] = {
 int
 icalrestriction_compare(icalrestriction_kind restr, int count){
 
-    if ( restr < ICAL_RESTRICTION_NONE || restr > ICAL_RESTRICTION_UNKNOWN
+    /* restr is an unsigned int, ICAL_RESTRICTION_NONE == 0, so the check will always return false */
+    if ( /*restr < ICAL_RESTRICTION_NONE ||*/ restr > ICAL_RESTRICTION_UNKNOWN
 	 || count < 0){
 	return -1;
     }
