Move check into own directory
svn path=/trunk/KDE/kdepim/gpgmepp/; revision=536922

--- a/gpgme++/CMakeLists.txt
+++ b/gpgme++/CMakeLists.txt
@@ -2,6 +2,8 @@ kde4_header()
 
 find_package( Gpgme )
 
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config-gpgmepp.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config-gpgmepp.h )
+
 add_subdirectory( interfaces )
 
 include_directories( ${KDE4_INCLUDES} ${GPGME_INCLUDES} )
