Move IdMapper from kdepim/libemailfunctions to kdelibs/kresources. It's a helper class to map local and remote ids used by several addressbook and calendar resources and has absolutely nothing to do with emails.
svn path=/trunk/KDE/kdelibs/kresources/; revision=537969

--- a/kresources/CMakeLists.txt
+++ b/kresources/CMakeLists.txt
@@ -17,6 +17,7 @@ set(kresources_LIB_SRCS
    configdialog.cpp
    selectdialog.cpp
    configpage.cpp
+   idmapper.cpp
    )
 
 kde4_automoc(${kresources_LIB_SRCS})
@@ -54,7 +55,7 @@ install_targets(${PLUGIN_INSTALL_DIR} kcm_kresources )
 
 install_files( ${XDG_APPS_DIR} FILES kresources.desktop )
 install_files( ${SERVICETYPES_INSTALL_DIR} FILES kresources_plugin.desktop kresources_manager.desktop )
-install_files( /include/kresources FILES resource.h    configwidget.h    factory.h    manageriface.h    managerimpl.h    manager.h    selectdialog.h    configdialog.h    configpage.h )
+install_files( /include/kresources FILES resource.h    configwidget.h    factory.h    manageriface.h    managerimpl.h    manager.h    selectdialog.h    configdialog.h    configpage.h idmapper.h )
 
 kde4_footer()
 
