--- a/kcal/libical/src/libical/icalderivedparameter.c.in
+++ b/kcal/libical/src/libical/icalderivedparameter.c.in
@@ -170,6 +170,8 @@ icalparameter* icalparameter_new_from_value_string(icalparameter_kind kind,const
     /* Search through the parameter map to find a matching kind */
 
     param = icalparameter_new_impl(kind);
+    if (!param)
+	return 0;
 
     for (i=0; icalparameter_map[i].kind != ICAL_NO_PARAMETER; i++){
         if(kind == icalparameter_map[i].kind) {
